--- a/docker/.env.example
+++ b/docker/.env.example
@@ -3,5 +3,6 @@ APP_CODE_PATH_CONTAINER=/var/www
 
 PHP_FPM_PUID=1000
 PHP_FPM_PGID=1000
+PHP_IDE_CONFIG=serverName=statistic
 
 INSTALL_XDEBUG=false
