--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -8,5 +8,7 @@ services:
                 - PUID=${PHP_FPM_PUID}
                 - PGID=${PHP_FPM_PUID}
                 - INSTALL_XDEBUG=${INSTALL_XDEBUG}
+        environment:
+            - PHP_IDE_CONFIG=${PHP_IDE_CONFIG}
         volumes:
             - ${APP_CODE_PATH_HOST}:${APP_CODE_PATH_CONTAINER}
